refactor: use meaningful identifier and class names according to rule 3.2 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.ad-block {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.ad-block img {
   width: 100%;
 }
-.aaa .more_inf {
+.ad-block .more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.ad-block { text-align: center;
 }
 }
 .centered-main-page-element {
