--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .ad-block img {
   width: 100%;
 }
-.ad-block .more_inf {
+.ad-block .ad-block__link {
   font-family: fantasy, cursive;
 }
 
@@ -21,17 +21,17 @@ body {
 .ad-block { text-align: center;
 }
 }
-.main {
+.app {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.app__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.app__task-container {
   display: flex;
 }
 ul {
@@ -118,12 +118,12 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-button.delete img {
+button.app__btn-delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.app__btn-delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -138,11 +138,11 @@ ul li input[type="text"] {
   display:none
 }
 
-ul li.editMode input[type="text"] {
+ul li.edit-mode input[type="text"] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display:none;
 }
