--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.ad-block img {
+.ad-block__img {
   width: 100%;
 }
-.ad-block .ad-block__link {
+.ad-block__link{
   font-family: fantasy, cursive;
 }
 
@@ -34,17 +34,17 @@ body {
 .app__task-container {
   display: flex;
 }
-ul {
+.app__tasks {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+.app__item, .app__title {
   list-style: none;
 }
 input,button{
   outline: none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +53,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.app__title,
+.app__add-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+#new-task, .app__task_input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,21 +79,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+#new-task:focus, .app__task_input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.app__add-label {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.app__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +102,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.app__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.app__item > .app__checkbox {
   margin: 0 10px;
 }
-li > label {
+.app__item > .app__task_label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.app__item >    .app__task_input {
   width: 226px;
 }
-button.app__btn-delete img {
+.app__btn-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.app__btn-delete img:hover {
+.app__btn-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .app__task_label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.app__task_input {
   display: none;
 }
 
-ul li.edit-mode input[type="text"] {
+.edit-mode .app__task_input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.edit-mode .app__task_label {
   display: none;
 }
