--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -124,7 +124,9 @@ button {
   align-items: center;
 }
 
-.app__item > * {
+.app__checkbox,
+.app__task,
+.button {
   vertical-align: middle;
 }
 
